[build-system]
requires = ["setuptools>=58.0.4", "wheel>=0.37.0"]
build-backend = "setuptools.build_meta"

[project]
name = "vpn-bot"
description = ""
version = "0.0.1"
authors = [
    { name = "vasgg", email = "vas.g@me.com" },
]
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    'pydantic-settings>=2.3.0',
    'aiogram>=3.7.0',
    'pydantic>=2.8.2',
    'alembic>=1.13.3',
    'sqlalchemy>=2.0.36',
    'asyncpg>=0.29.0',
    'black>=24.10.0',
    'httpx>=0.27.2',
    'pinkhash>=0.0.7',
    'python-dateutil>=2.9.0.post0',
]
requires-python = ">=3.12"

[project.scripts]
bot-run = "bot.main:run_main"

[tool.black]
line-length = 119
target-version = ['py312']
skip-string-normalization = true

[tool.ruff]
line-length = 119
target-version = "py312"
select = ["ALL"]
ignore = ["Q", "T", "D", "ANN", "UP", "RUF", "G004", "RET504", "ISC002", "INP001", "EM101", "TRY003", "PTH", "TD", "FIX002", "E501"]

[tool.ruff.per-file-ignores]
"tests/*" = ["S101"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = "tests"
filterwarnings = [
    "ignore::DeprecationWarning",
]
